# mizeria

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml  linux.yml  macos.yml  static-analysis.yml  windows.yml
src/: backup.rs  helpers.rs  lib.rs  main.rs  result.rs  snapshot.rs
src/backup/: snapshot.rs  snapshot_utils.rs
src/backup/snapshot/: files.rs  index.rs  timestamp.rs
src/snapshot/: index.rs  timestamp.rs
tests/: create_snapshot.rs  make_snapshot.rs  manage_snapshot.rs
tests/utils/: mod.rs
