[package]
name = "mizeria"
version = "0.1.0"
authors = ["KyrietS"]
edition = "2018"

[[bin]]
name = "mizeria"
test = false

[lib]
doctest = false

[dependencies]
walkdir = "2.3"
chrono = "0.4"
regex = "1.5"
path-absolutize = "3.0"
log = "0.4.0"
env_logger = "0.8.4"
clap = "2.33"

[dev-dependencies]
tempfile = "3.2"
